phase9-gitops-platform/mesh/workloads/kong-peer-authentication.yaml
apiVersion: security.istio.io/v1
kind: PeerAuthentication
metadata:
  name: default
  namespace: kong
spec:
  mtls:
    mode: PERMISSIVE
